style.css
/* ... */
.contain > h2, .contain > h3, .contain > h4, .contain > h5 {
	max-width: 780px;
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}

.post_image_shadow {
	box-shadow: 0px 10px 75px rgba(0,0,0,0.1);
}

article {
	margin-bottom: 0 !important; /* The margin bottom is defined in .hentry, which is used in RRS styling? */
}

#content_header_wrapper {
	width: 100%;
	height: 100vh;
	position: relative;
	margin: -60px 0 0 -60px;
}

#content_featured_image {
	width: 100%;
	height: 100%;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	position: fixed;

	transition: background-size 1s ease; /* Doesnt workd */
}

.content-area {
}

.entry_heading_wrapper {
	display: table;
	width: 50%;
	height: auto;
	margin: 0 auto;
}

.entry_heading_container {
	width: calc(100vw);
	height: calc(100vh);
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	position: relative;
	padding: 0;
}

.no_header_image .entry_heading_container {
	height: auto;
	padding-bottom: 160px;
}
.no_header_image .entry_heading_container .entry_heading_wrapper h1, .no_header_image .entry_heading_container .entry_heading_wrapper p {
	color: black !important;
	text-shadow: none;
}

.entry_title {
	vertical-align: middle;
	text-align: center;
	/*font-size: 60px;*/
	position: relative;
	text-shadow: 1px 1px 0px rgba(0,0,0,0.8);
}

/*.entry_title::after {
	content: "";
	width: 80px;
	border-bottom: 2px solid #fff;
	display: block;
	margin: 25px auto 15px;
}*/

.entry_excerpt {
	vertical-align: middle;
	text-align: center;
	font-size: 1.5rem;
	color: #fff;
	text-shadow: 0px 1px 1px rgba(0,0,0,0.5), 0 0px 20px rgba(0,0,0,.6);
	font-style: italic;
	margin-top: -25px;

	font-family: 'Libre Baskerville', serif;
}


.content_section_wrapper, .entry_content, .aside_wrapper {
	width: 100%;
	position: relative;
	background-color: #fff;
	z-index: 1;
	/*margin-top: 60px;*/
}

.content_section_wrapper:nth-child(1) {
	margin-top: 0;
}

.entry_content {
	background-color: #fff;
	padding: 0;
	margin-top: 0;
}

.content_section_wrapper:nth-child(2n) {
	background-color: rgba(244,244,244,1);
}

.content_section_wrapper:nth-child(2n + 1) {
	background-color: rgba(244,244,244,1);
}

.content_section, .widget-area {
	width: calc(100% - 60px);
	max-width: 1300px;
	/*padding: 0px 50px;*/
	margin: 0 auto;
	position: relative;

	/*background-color: green;*/
}

@media (max-width: 1400px) {
	.content_section, .widget-area {
		max-width: 1100px;
	}

	.other_projects_column_num_5 {
		display: none !important;
		margin-left: 100px !important;
	}
}

.content_section_padding {
	/*padding: 60px 150px;*/
}

.content_section h1 {
	margin-top: 0;
	color: rgb(200,200,200);
	text-shadow: none;
}

.sticky {
	display: block;
}

.hentry {
	margin: 0 0 1.5em;
}

.byline,
.updated:not(.published) {
	display: none;
}

.single .byline,
.group-blog .byline {
	display: inline;
}

.page-links {
	clear: both;
	margin: 0 0 1.5em;
}

.entry_footer {
	background-color: rgba(251, 251, 251, 1);
	width: 100%;
	position: relative;
}

/*--------------------------------------------------------------
### Front-page
--------------------------------------------------------------*/
.other_projects .contain {
}

@media (min-width: 1316px) {
	.other_projects .contain {
		margin: 2rem auto;
	}
}

.other_projects_padding {
	padding: 1rem !important;
}

.other_pojects {
	height: 28rem;
	/*margin-top: 2rem;*/
	/*float: left;*/
	overflow: hidden;
	/*margin-left: 30px !important;*/
	/*margin-right: 30px !important;*/
	border-radius: 5px;
	box-shadow: 10px 10px 30px rgba(0,0,0,0.1);

	transition: all 250ms ease-out;
}

.other_pojects:hover {
	box-shadow: 0px 0px 150px rgba(0,0,0,0.4);
	z-index: 10;
	transform: scale(1.01, 1.01);
}

.other_pojects_hover {
	z-index: 10;
}

.other_projects_big_img_wrapper {
	width: 100%;
	height: 66%;
	position: relative;
}

.other_projects_img, .other_projects_img_overlay, .other_projects_img_overlay_2 {
	width: 100%;
	height: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
}

.other_projects_img_overlay {
	background-color: rgba(0,0,0,0.3);
	position: absolute;
	bottom: 0;
	opacity: 1;

	/*transition-delay: 250ms;*/
	transition: all 250ms ease-out;
}

.other_projects_img_overlay_toggled {
	opacity: 0;
}

.other_projects_logo {
	background-size: contain;
	background-repeat: no-repeat;
	background-position: bottom left;
	width: 8rem;
	height: 3.5rem;
	position: absolute;
	bottom: 1.5625rem;
	left: 1.5625rem;
	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0));

	transition: all 250ms ease-out;
}

.other_projects_logo_hover {
	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
}

.other_projects_text_wrapper {
	height: 34%;
	width: 100%;
	padding: 1.5625rem;
	/*margin-top: 5px;*/
	background-color: #fff;
	color: rgb(130,130,130);
}

.other_projects_column_num_1 {
	margin-left: 0 !important;
}

.other_pojects_2 {
	width: 100%;
	float: left;
	min-width: 230px;
	height: calc(28rem / 2 - 1rem);
	margin: 2rem 0 0 0;
}

.other_projects_2_container {
	display: block;
	margin-top: -2rem;
}

#other_projects_num4 {
	margin-right: 0;
} 

.other_pojects_small:nth-of-type(2), .other_pojects_small:nth-of-type(4) {
	margin-left: 10px;
}

.other_pojects_small:nth-of-type(3), .other_pojects_small:nth-of-type(4) {
	margin-top: 10px;
}

.other_projects_text_wrapper p, .other_projects_text_wrapper h3 {
	margin: 0;
}

@media (max-width: 1400px) {
	.other_pojects_1 {
		width: calc(25% - 3.3333px);
		min-width: 230px;
	}

	.other_pojects_05 {
		width: calc(50% - 3.3333px);
		min-width: 460px;
	}

	#other_projects_num4 {
		margin-right: 5px;
		display: none;
	}

	#other_projects_num3, #other_projects_num7 {
		margin-right: -2px;
	}
}

.other_projects_text_wrapper p {
	margin-top: .75rem;
	font-family: 'Libre Baskerville', serif;
	font-size: .9rem; /*Baskerville seems a big larger*/
}
/* ... */

